--- a/app/src/main/res/layout/add_task_dialog.xml
+++ b/app/src/main/res/layout/add_task_dialog.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:minWidth="500dp"
     android:minHeight="480dp"
     android:layout_gravity="center"
     android:padding="7dp">
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,6 +16,7 @@
         android:background="@color/white"
         android:padding="14dp"
         tools:ignore="UseSwitchCompatOrMaterialXml">
+
 
         <TextView
             android:id="@+id/AddTaskTextView"
@@ -39,17 +42,16 @@
             android:hint="@string/what_s_the_task"
             android:inputType="textAutoCorrect"
             android:padding="7dp" />
-        
+
         <EditText
 
             android:id="@+id/dateOfTaskEditText"
             android:layout_width="140dp"
             android:layout_height="56dp"
             android:layout_below="@id/titleOfTaskEditText"
-            android:layout_alignStart="@+id/titleOfTaskEditText"
             android:layout_marginStart="0dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_toStartOf="@+id/timeOfTaskEditText"
             android:background="@drawable/edittext_shape"
             android:clickable="false"
@@ -77,7 +79,7 @@
 
         <View
             android:id="@+id/line_1"
-            android:layout_width="304dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_below="@id/dateOfTaskEditText"
             android:layout_marginTop="32dp"
@@ -97,10 +99,10 @@
 
         <RadioGroup
             android:id="@+id/radioGroup"
-            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/setPriorityTextView"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
@@ -144,10 +146,10 @@
 
         <View
             android:id="@+id/line_2"
-            android:layout_width="304dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_below="@id/radioGroup"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="19dp"
             android:background="@drawable/line_1" />
 
         <Switch
