--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,13 +8,15 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="blue">#2E3A59</color>
+    <color name="blue">#4F6191</color>
+
     <color name="blue_light">#376EFB</color>
     <color name="tab_color">#992E3A59</color>
     <color name="green">#00B894</color>
     <color name="green_light">#88D1C3</color>
+    <color name="whiter">#737373</color>
 
-    <color name="background">#E5E5E5</color>
+    <color name="background">#CAC9C9</color>
 
     // radio group
     <color name="orange_light">#F8AA4E</color>
