--- a/app/src/main/res/drawable/add_btn_shape.xml
+++ b/app/src/main/res/drawable/add_btn_shape.xml
@@ -9,7 +9,7 @@
         <clip-path android:pathData="M12 0H134C140.627 0 146 5.37258 146 12V37C146 43.6274 140.627 49 134 49H12C5.37258 49 0 43.6274 0 37V12C0 5.37258 5.37258 0 12 0Z" />
 
         <path
-            android:fillColor="#376EFB"
+            android:fillColor="#4F6191"
             android:pathData="M0 0V49H146V0" />
 
     </group>
