--- a/app/src/main/res/drawable/checked.xml
+++ b/app/src/main/res/drawable/checked.xml
@@ -6,7 +6,7 @@
                 <shape android:shape="oval">
                     <corners android:radius="1dp" />
                     <stroke android:width="1dp" android:color="#777" />
-                    <gradient android:angle="270" android:centerColor="@color/green" android:endColor="@color/green" android:startColor="@color/green" />
+                    <gradient android:angle="270" android:centerColor="#000000" android:endColor="@color/black" android:startColor="@color/black" />
                     <size android:width="30dp" android:height="30dp" />
                 </shape>
             </item>
