--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -1,74 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="8dp"
     tools:context=".ui.viewPagerFragment.ViewPagerFragment">
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="0dp"
+        android:layout_height="675dp"
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <RelativeLayout
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <LinearLayout
             android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_centerHorizontal="true">
+            android:layout_width="410dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal">
 
             <Button
                 android:id="@+id/todoTab"
-                android:layout_width="90dp"
-                android:layout_height="45dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_margin="8dp"
-                android:layout_marginStart="20dp"
-                android:background="@drawable/btn_blue_shape"
-                android:padding="7dp"
-                android:text="@string/todo"
-                android:textAllCaps="false"
-                android:textColor="@color/white" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="6dp"
+                android:layout_weight="1"
+                android:backgroundTint="#4F6191"
+                android:text="todo Tab"
+                android:textSize="10sp" />
 
             <Button
                 android:id="@+id/completedTab"
-                android:layout_width="124dp"
-                android:layout_height="45dp"
-                android:layout_alignParentTop="true"
-                android:layout_margin="8dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_toEndOf="@id/todoTab"
-                android:background="@drawable/btn_white_shape"
-                android:padding="7dp"
-                android:textAllCaps="false"
-                android:text="@string/complete"
-                android:textColor="@color/tab_color" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="6dp"
+                android:layout_weight="1"
+                android:backgroundTint="#4F6191"
+                android:text="completed Tab"
+                android:textSize="10sp" />
 
             <Button
                 android:id="@+id/overdueTab"
-                android:layout_width="114dp"
-                android:layout_height="45dp"
-                android:layout_alignParentTop="true"
-                android:layout_margin="8dp"
-                android:layout_toEndOf="@id/completedTab"
-                android:background="@drawable/btn_white_shape"
-                android:padding="7dp"
-                android:textAllCaps="false"
-                android:text="@string/overdue"
-                android:textColor="@color/tab_color" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="6dp"
+                android:backgroundTint="#4F6191"
+                android:layout_weight="1"
+                android:text="overdue Tab"
+                android:textSize="10dp" />
+        </LinearLayout>
 
-        </RelativeLayout>
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/tabs"
-            android:layout_marginTop="0dp" />
-
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
