--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="12dp"
             android:background="@color/black"
-            android:text="CREATE NEW TASK"
+            android:text="CREATE NEW TASKA"
             android:textColor="@color/background"
             android:textSize="24sp"
             android:textStyle="bold" />
