--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,17 +53,17 @@
 
         <Button
             android:id="@+id/addTaskBtn"
-            android:layout_width="155dp"
-            android:layout_height="wrap_content"
+            android:layout_width="283dp"
+            android:layout_height="30dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginBottom="12dp"
-            android:background="@color/black"
+            android:layout_marginBottom="42dp"
+            android:background="@drawable/edittext_shape"
             android:text="CREATE NEW TASK"
-            android:textColor="@color/background"
+            android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
 
