--- a/app/src/main/res/drawable/checked.xml
+++ b/app/src/main/res/drawable/checked.xml
@@ -5,8 +5,8 @@
             <item>
                 <shape android:shape="oval">
                     <corners android:radius="1dp" />
-                    <stroke android:width="1dp" android:color="#777" />
-                    <gradient android:angle="270" android:centerColor="#000000" android:endColor="@color/black" android:startColor="@color/black" />
+                    <stroke android:width="1dp" android:color="#FFFFFF" />
+                    <gradient android:angle="270" android:centerColor="#DA3C0B" android:endColor="#D5722F" android:startColor="#DA8895" />
                     <size android:width="30dp" android:height="30dp" />
                 </shape>
             </item>
@@ -14,7 +14,7 @@
             <item android:width="8dp" android:height="2dp" android:left="6dp" android:top="20dp">
                 <rotate android:fromDegrees="45">
                     <shape android:shape="rectangle">
-                        <solid android:color="#fff" />
+                        <solid android:color="#FAF9F9" />
                     </shape>
                 </rotate>
             </item>
@@ -22,7 +22,7 @@
             <item android:width="19dp" android:height="2dp" android:left="9dp" android:top="16dp">
                 <rotate android:fromDegrees="-45">
                     <shape android:shape="rectangle">
-                        <solid android:color="#fff" />
+                        <solid android:color="#FFFFFF" />
                     </shape>
                 </rotate>
             </item>
