--- a/app/src/main/res/drawable/unchecked.xml
+++ b/app/src/main/res/drawable/unchecked.xml
@@ -4,12 +4,12 @@
     <corners android:radius="1dp" />
     <stroke
         android:width="1dp"
-        android:color="#777" />
+        android:color="#930101" />
     <gradient
-        android:angle="270"
-        android:centerColor="@color/white"
-        android:endColor="@color/white"
-        android:startColor="@color/white" />
+        android:angle="10"
+        android:centerColor="#F3BBC3"
+        android:endColor="#CDA179"
+        android:startColor="#AEAE63" />
     <size
         android:width="30dp"
         android:height="30dp" />
