--- a/app/src/main/res/layout/fragment_over_due.xml
+++ b/app/src/main/res/layout/fragment_over_due.xml
@@ -3,14 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="#2E2C2C"
     tools:context=".ui.overDueFragment.OverDueFragment">
 
+    <RelativeLayout
+        android:id="@+id/noTaskLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+    </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/overDueRecyclerView"
         android:layout_width="match_parent"
+        android:layout_marginTop="5dp"
         android:layout_height="match_parent"
-        android:padding="7dp"
+        android:padding="12dp"
         tools:listitem="@layout/overdue_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
