--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -7,6 +7,7 @@
     android:layout_marginTop="2dp"
     tools:context=".ui.viewPagerFragment.ViewPagerFragment">
 
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="0dp"
@@ -14,6 +15,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -38,8 +41,9 @@
                 android:layout_marginEnd="6dp"
                 android:layout_weight="1"
                 android:backgroundTint="#4F6191"
-                android:text="todo Tab"
+                android:text="ToDo"
                 android:textSize="10sp" />
+
 
             <Button
                 android:id="@+id/completedTab"
@@ -48,7 +52,7 @@
                 android:layout_marginEnd="6dp"
                 android:layout_weight="1"
                 android:backgroundTint="#4F6191"
-                android:text="completed Tab"
+                android:text="Completed"
                 android:textSize="10sp" />
 
             <Button
@@ -56,9 +60,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
-                android:backgroundTint="#4F6191"
                 android:layout_weight="1"
-                android:text="overdue Tab"
+                android:backgroundTint="#4F6191"
+                android:text="Overdue"
                 android:textSize="10sp" />
         </LinearLayout>
 
