--- a/app/src/main/res/layout/overdue_item.xml
+++ b/app/src/main/res/layout/overdue_item.xml
@@ -43,10 +43,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_margin="8dp"
-                android:button="@drawable/unchecked"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:button="@drawable/overduesvg"
                 android:checked="true"
-                android:clickable="true"
+                android:clickable="false"
                 android:focusable="true"
                 android:text="" />
 
@@ -54,7 +57,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/oneline"
             android:orientation="vertical">
 
